feat: moderniza Spring AI, padroniza erros em ProblemDetail e amplia testes
- Atualiza Spring Boot 3.3.5 -> 3.5.16 e Spring AI 1.0.0-M3 -> 1.1.8
  (novo starter spring-ai-starter-model-openai, sem repositorio de milestones)
- Substitui ErrosController por ApiExceptionHandler com ProblemDetail (RFC 7807),
  incluindo 502/503 para falhas do provedor de IA
- Faz a entrada REST reaproveitar TransacaoService.registrar, para a regra de
  valor positivo valer tambem no caminho do Tool Calling
- Fixa o locale pt-BR na formatacao monetaria das tools
- Adiciona @Transactional no service e mensagens de validacao em portugues
- Reescreve os testes com Mockito/AssertJ e adiciona testes de controller e tools